chore: fix color differences

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -81,7 +81,7 @@ h2 {
   color: white; /* Text color */
 }
 .home .categories .cat1 {
-  background-color: #bff4e7;
+  background-color: #aaf0df;
   margin-left: 100px;
   margin-right: 100px;
 }
