--- a/src/pages/women's clothing/womens-clothing.css
+++ b/src/pages/women's clothing/womens-clothing.css
@@ -4,7 +4,7 @@
   margin: 0;
 }
 
-.products-container1 {
+.products-container {
   width: 90%;
   min-height: 80vh;
   display: grid;
@@ -23,11 +23,11 @@ img:hover {
   transform: scale(1.1);
 }
 
-.card1 {
+.card {
   border-radius: 30px;
   background-color: #ffffff;
   width: 400px;
-  height: 600px;
+  height: auto;
   margin: 40px;
   display: flex;
   flex-direction: column;
@@ -35,21 +35,21 @@ img:hover {
   align-items: center;
   box-shadow: 3px 3px 1px 1px #ebebeb;
 }
-.card1 .card-title1 h3 {
-  font-size: 20px;
+.card .card-title h3 {
+  font-size: 15px;
   margin-top: 5px;
 }
 
-.card-description1 {
-  height: 400px;
+.card-description {
+  height: 350px;
   border-radius: 30px;
   display: flex;
   align-items: justify;
   flex-direction: column;
   margin-top: 40px;
-  background-color: #bff4e7;
+  background-color: #ffbece;
 }
-.content1 .heading1 h1 {
+.content .heading h1 {
   text-align: left;
   margin-left: 50px;
   margin-top: 30px;
