--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,24 +6,38 @@
   justify-content: space-between;
   align-items: center;
 }
-.links {
-  margin-right: 50px;
+.navbar .homelink {
+  margin-right: 0;
   display: flex;
   align-items: center;
+  font-size: 50px;
+  margin-left: 0;
 }
-.links a {
+
+.pagelink {
+  margin-right: 50px;
+  display: flex;
+  align-items: right;
+  font-size: 30px;
+}
+
+.pagelink a {
+  margin-left: 30px;
+}
+
+.homelink a,
+.pagelink a {
   text-decoration: none;
   color: white;
-  margin-left: 20px;
-  font-size: 20px;
 }
+
 .logo {
   margin-top: 7px;
   width: 130px;
   height: auto;
-  margin-right: 100px;
 }
 .logo-container {
   display: flex;
   align-items: center;
+  align-self: center;
 }
