--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0px 5px 8px 0px #00000040;
 }
 .navbar .homelink {
   margin-right: 0;
@@ -32,7 +33,7 @@
 }
 
 .logo {
-  margin-top: 7px;
+  margin-top: 35px;
   width: 130px;
   height: auto;
 }
