--- a/src/components/categoryTile/CategoryTile.css
+++ b/src/components/categoryTile/CategoryTile.css
@@ -1,42 +1,14 @@
-.categories {
-  display: flex;
-  margin-left: 3%;
-  margin-right: 5%;
-  margin-top: 2%;
-}
-
-.categories .catLink {
-  font-size: 3vw; /* This will make the font size responsive */
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 8vw; /* Use vw units for gap to keep it proportional */
-}
-
-.categories .catLink .men {
-  background-color: #2bd9af;
-}
-
-.categories .catLink .women {
-  background-color: #ff5e84;
-}
-
-.categories .catLink .link {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.categories .men,
-.categories .women {
-  display: flex;
-  width: 40vw; /* Use vw for responsive width */
-  height: 30vh; /* Use vh for responsive height */
-  border-radius: 40px; /* Use vw for responsive border radius */
+.category-tile {
+  display: flex; /* Use flex to center content */
+  flex-grow: 1;
+  height: 20vh;
+  border-radius: 2vw;
   justify-content: center;
   align-items: center;
-  transition: transform 0.2s; /* Add a transition for smooth hover effect */
+  transition: transform 0.2s, background-color 0.2s;
 }
 
-.categories .men:hover,
-.categories .women:hover {
-  transform: scale(1.05); /* Slightly enlarge on hover */
+.category-tile .link {
+  color: #ffffff;
+  text-decoration: none;
 }
