--- a/src/components/loading/Loading.css
+++ b/src/components/loading/Loading.css
@@ -1,9 +1,10 @@
 .Loading {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full viewport height */
-  background-color: #f0f0f0;
+  height: 20vh; /* Full viewport height */
+  background-color: #f5f5f5;
   font-size: 24px;
   color: #333;
 }
