--- a/src/templates/sections/categories/categories.css
+++ b/src/templates/sections/categories/categories.css
@@ -11,12 +11,29 @@
 
 .category-tile {
   flex: 1; /* Allow tiles to grow and fill available space */
-  min-width: 900px; /* Set a minimum width to ensure proper size */
+  min-width: 300px; /* Set a minimum width to ensure proper size */
   height: 30vh;
   border-radius: 2vw;
   justify-content: center;
   align-items: center;
   transition: transform 0.2s, background-color 0.2s;
+  display: flex; /* Flexbox to center content */
+}
+
+.category-tile.men {
+  background-color: #2bd9af;
+}
+
+.category-tile.women {
+  background-color: #ff5e84;
+}
+
+.category-tile.men:hover {
+  background-color: #239b85;
+}
+
+.category-tile.women:hover {
+  background-color: #cc4b69;
 }
 
 .category-tile .link {
