chore: Implement reviewer requested changes

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,19 @@ p {
   font-family: Roboto
     url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 }
+
+.men-background {
+  background-color: #2bd9af;
+}
+
+.women-background {
+  background-color: #ff5e84;
+}
+
+.men-background:hover {
+  background-color: #239b85;
+}
+
+.women-background:hover {
+  background-color: #cc4b69;
+}
