--- a/src/components/categoryTile/CategoryTile.css
+++ b/src/components/categoryTile/CategoryTile.css
@@ -8,7 +8,7 @@
   height: 30vh;
 }
 
-.category-tile .link {
+.link {
   color: #ffffff;
   text-decoration: none;
   font-size: 2rem; /* Adjusted to fit better */
