--- a/src/ui-core/components/molecules/Navbar/Navbar.component.css
+++ b/src/ui-core/components/molecules/Navbar/Navbar.component.css
@@ -1,6 +1,6 @@
 .navbar {
-  width: 100%;
-  height: 80px;
+  width: 100vw;
+  height: 7vh;
   background-image: linear-gradient(to right, #ffaec2, #95ecd7);
   display: flex;
   justify-content: space-between;
@@ -16,14 +16,14 @@
 }
 
 .pagelink {
-  margin-right: 50px;
+  margin-left: 65vw;
   display: flex;
   align-items: right;
   font-size: 30px;
 }
 
 .pagelink a {
-  margin-left: 30px;
+  margin-left: 3vw;
 }
 
 .homelink a,
@@ -33,12 +33,38 @@
 }
 
 .logo {
-  margin-top: 35px;
-  width: 130px;
+  margin-top: 1vh;
+  width: 6vw;
   height: auto;
 }
 .logo-container {
   display: flex;
   align-items: center;
   align-self: center;
+}
+
+.auth-buttons {
+  padding-right: 2vw;
+}
+
+.auth-buttons button {
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #00000040;
+}
+
+.auth-buttons button:hover {
+  background-color: #2bd9af;
+  color: #ffffff;
+}
+
+.sign-in-button button {
+  width: 4vw;
+  height: 2vh;
+}
+
+.cl-avatarImage .cl-userButtonAvatarImage {
+  align-items: center;
 }
